green800.css
/***************************************************
     AUTHOR: Pat Heard ( FullAhead.org )
   TEMPLATE: Greenery
       DATE: 2005.11.30
  COPYRIGHT: none
 ***************************************************/
/***************************************************
   HTML Element Styles
 ***************************************************/
html, body {
  margin: 0;  
  padding: 0;
  border: 0;
  text-align: left;
  font: 0.80em verdana, arial, sans-serif;  
  /* line-height: 170%; */
  height: 100%;
  color: #EEE;
  min-width: 1000px;
  background: #585858 url(images/bg_body800.jpg) repeat-y top center;
}
p { 
  padding-top: 10px !important;
  padding-top: 3px;
  padding-bottom: 10px !important;
  padding-bottom: 3px;
}
a { color: #86E160; }
a:visited { color: #AAA; }
a:hover { color: #FFF; }
table   { 
    border-collapse: collapse; 
    font-size: 10px;
    margin-top: 3px;
    margin-bottom: 3px;
}
td  { vertical-align: top }
tr.l {
	background-color: transparent;
	color: white;
}
tr.l a { color: #CCCC33; }
tr.l a:hover { color: #F67769; }
tr.h { background-color: #009999; }
tr.d {
	background-color: #666666;
	color: white;
}
tr.d a { color: #CCCC33; }
tr.d a:hover { color: #F67769; }
acronym {
  cursor: help;
  border-bottom: 1px solid #777;
}
/*
input {
  width: 70%;
}
*/
textarea {
  width: 100%;
  /* 
    IE specific to eliminate scroll bar when not needed. 
    Uncomment if wanted, but it is not valid CSS
     
  scrollbar-3dlight-color : #777;
  scrollbar-arrow-color : #EEE;
  scrollbar-darkshadow-color : #777;
  scrollbar-face-color : #777;
  scrollbar-highlight-color : #777;
  scrollbar-shadow-color : #777;
  scrollbar-track-color : #777;    
  */
}

input,
textarea {
  padding: 1px 3px;
  margin: 5px 0;
  font: 1em verdana, arial, sans-serif;
  color: #333;
  background-color: #CCC;
  border: 1px solid #999;
}

input:hover,
input:focus,
textarea:hover,
textarea:focus {
  color: #000;
  background-color: #FFF;
  border: 1px solid #EEE;
}
h1 {
  clear: both;
  margin: 10px 0;
  font: 700 1em verdana, sans-serif;
  text-transform: uppercase;
  color: #0000af; /*#7BD32C;*/
  background: #686868 url(images/rounded_tr.gif) no-repeat top right;
}
h1 span {
  display: block;
  padding: 2px;
  background: url(images/rounded_br.gif) no-repeat bottom right;
}
blockquote {  
  margin: 0;
  background: #686868 url(images/rounded_tr.gif) no-repeat top right;
} 
blockquote span {
  display: block;
  padding: 5px;
  background: url(images/rounded_br.gif) no-repeat bottom right;
}
/***************************************************
  Layout Element Styles
 ***************************************************/
#header {  
  width: 80%;
  margin: 0px 10% 0px 10%;
  min-width: 600px;
  height: 3em;
  padding: 0;
  border: 0;
  background-color: #536eb2; /*86E160;*/
  /* text-align: center; */
  /*background: #585858 url(images/bluehead800.jpg) repeat-y top center;  */
}

/***************************************************
  Header Menu
 ***************************************************/

#menu {
  width: 80%;
  margin: 0 auto;
  padding: 0;
  border: 0;
  text-align: left;  
}
#menu ul {
  margin: 0;
  padding: 0;
  line-height: normal;  
}
#menu ul li {
  width: 8em;
  display: inline;
  float: left;
  padding-top: 0.8em;  
  list-style: none;
  text-align: center;
}

#menu ul li a {
  display: block;
  text-decoration: none;
  text-transform: uppercase;
  padding-bottom: 1.0em;
  color: #222;
}
#menu ul li a:hover,
#menu ul li a.active {
  font-weight: bold;
  color: #111;
  background: url(images/menu_tab_blue.gif) no-repeat bottom center;  
}


/***************************************************
  Site Title
 ***************************************************/
#title {
  padding: 0.6em 5px 0.6em 0;
  margin-right: 0.5em;
  float: right;
  /* background: url(images/logo_greenery.gif) no-repeat top right; */
}
#title h1 {
  display: inline;
  color:  #222;
  vertical-align: top;
  font: bold 1.2em verdana,arial,sans-serif;  
  background-color: #536eb2; /*86E160;*/
  background-image: none;
}
#titler {
  padding: 0.6em 15px 0.6em 15px;
  margin-right: 0.5em;
  float: right;
}
#titler h1 {
  display: none;
  color:  #000000;
  font: 1.35em bold,verdana,arial,sans-serif;
  background-color: #999999;
  background-image: none;
}
/***************************************************
 Possible Page Content
 1. Left side text
 2. Dropdown image
 3. Right side bar 
 ***************************************************/
#content {
  clear: both;
  width: 80%;
  min-height: 100%;
  /*margin: 0 auto;*/
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 0px;
  margin-bottom: 0px;
  background-color: #444444; /*86E160;*/
  padding: 0;
  border: 0;
  vertical-align: top;
  text-align: left;
  overflow: auto;
  /*background-color: #383838; /*86E160;*/
  /*background-color: #536eb2; /*86E160;*/
}
#content ol li { color: #9BE4FF; }
#content ol li span { color: #EEE; }
#content ul { padding-bottom: 10px; }
#content ul li {
  list-style-image: url(images/li_bullet.gif);
}
#twocol {
    float: left;
    width: 100%;
}
#colone {
    float: left;
    width: 45%;
    display: inline;
}
#coltwo {
    float: right;
    width: 45%;
    display: inline;
}
#text {
  float: left;
  text-align: left;
  overflow: auto;
  /*width: 403px !important;*/
  width: 50%;
  min-width: 400px;
  background-color: #444444; /*86E160;*/
  /*padding: 10px 5px 20px 20px !important; */
  padding: 10px 5px 20px 5px;
  display:inline;
}
#image {
  vertical-align: top;
  float: right;
  width: 170px;  
  text-align: center;
  padding: 0;
  border: 0;
  margin: 0;
  background-color: #444444; /*86E160;*/
}
#sideBar {
  float: right;
  vertical-align: top;
  /* width: 185px !important; */
  width: 200px;
  /* padding: 10px 15px 20px 0 !important; */
  padding: 10px 15px 20px 0;
  background-color: #444444; /*86E160;*/
  height: 100%;
  display:inline;
}
#sideBar h1 {
  text-align: right;
  background: #686868 url(images/rounded_tl.gif) no-repeat top left;
}
#sideBar h1 span {
  display: block;
  padding: 2px;
  background: url(images/rounded_bl.gif) no-repeat bottom left;
}

/***************************************************
 Sidemenu Styles
 ***************************************************/

.sideMenu { padding: 10px 0; }
.sideMenu a {
  display: block;
  text-align: right;
  text-decoration: none;
  margin-bottom: 1px;  
}
.sideMenu a span {
  display: block;
  padding: 1px;
}
.sideMenu a:hover {
  background: #686868 url(images/rounded_tl.gif) no-repeat top left;
}
.sideMenu a:hover span {
  background: url(images/rounded_bl.gif) no-repeat bottom left;
}

/***************************************************
 Comment Styles
 ***************************************************/

#comments p {
  padding: 0 5px;
  margin-bottom: 0;
  background: #686868 url(images/rounded_tl.gif) no-repeat top left;
}
#comments p span.author {
  display: block;
  margin-top: 5px;
  text-align: right;
  font-weight: 700;
}
#comments img { margin-top: -1px; }
#comments a { color: #7BD32C; }
#comments a:visited { color: #AAA; }
#comments a:hover { color: #FFF; }

/***************************************************
 Footer
 ***************************************************/

#footer {
  clear: both;
  float: left;
  width: 100%;
  background-color: #444444; /*86E160;*/
  padding: 10px 0px 20px 0px;
  color: #888;
}
#footer p {
  padding-top: 0 !important;
  padding-top: 10px;
}
#footer a { color: #888; }
#footer a:hover {
  color: #EEE;
}
a.fullAhead {
  float: left;
  width: 30px;
  height: 34px;  
  margin-right: 10px;
  background: url(images/logo_fullahead.gif) no-repeat 0 0;
}

a:hover.fullAhead  {
  background-position: -30px 0;
}
/***************************************************
 Generic Display Classes
 ***************************************************/
.center { text-align: center; }
.noPad { padding: 0; margin: 0; }
.left { float: left; }
.right { float: right; }
img.left {
  padding: 5px 5px 5px 0;
}
img.right {
  padding: 5px 0 5px 5px;
}
.button { width: auto; cursor: pointer; }
.date { display: block; font-weight: 700; }
.trackInfo
{
    border:solid black 2px;
    background-color:white;
    opacity: 0.80;
    color:black;
    font-family:Arial, Helvetica, Bold, sans-serif;
    font-size:14px;
    padding:5px;
    text-align:left;
}
.htmlControl
{
    border:solid black 2px;
    background-color:yellow;
    opacity: 0.70;
    color:black;
    font-family:Arial, Helvetica, Bold, sans-serif;
    font-size:11px;
    text-align:left;
}
.htmlButton
{
    cursor:pointer;
    margin:1px;
    padding:1px;
}
/*.waypoint {background-color:#6666ff;color:#000000;font-size:11px;font-weight:bold;margin:0px;padding:0px;border:0px #006699 solid;}*/
.waypoint {background-color:#ffffff;color:#000000;font-size:11px;font-weight:bold;margin:0px;padding:0px;border:1px #000000 solid;}
.clearwpt {background-color:#ffffff;color:#000000;font-size:12px;font-weight:bold;margin:0px;padding:0px;border:1px #000000 solid;}
.animate {background-color:none;color:yellow;font-size:10px;font-weight:bold;margin:0px;padding:0px;border:1px;}

